-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
6.0
-
None
-
313ed3d19ad41c2819265b4667bb7f28a024dd89 (qt/qtbase/dev) 1b06c07115d7da4fb2af05d30647d822c3ccae7a (qt/qtbase/dev)
This is visible in Assistant. Comparing the time spent inside setSource (qt 5) and doSetSource (qt 6) it's about 25 times longer.
To reproduce:
Run assistant, go to index tab, type "map" and select the one coming from QtConcurrent Namespace. I've measured the time spent inside a call to QTextBrowser::setSource(resolvedUrl); from void HelpViewer::setSource. In Qt5 it's ~240 ms, while in Qt6 it's ~6800 ms (yeah, nearly 7 seconds).
For Gerrit Dashboard: QTBUG-86354 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
315052,6 | Optimize equality operators for string classes | dev | qt/qtbase | Status: MERGED | +2 | 0 |
315053,2 | Don't store QTextHtmlParserNode by value in a QList | dev | qt/qtbase | Status: MERGED | +2 | 0 |
315054,2 | Use QStringTokenizer instead of QStringView::split | dev | qt/qtbase | Status: MERGED | +2 | 0 |